--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,21 @@
+
 body {
-  background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
+  background: grey;
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
 }
+
+
+.top-nav {
+  height: 20%;
+  width: 100%;
+}
+
+
+
+
+
