--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -15,6 +15,34 @@ body {
   width: 100%;
 }
 
+.main {
+  display: flex;
+  height: 80%;
+  flex-direction: row;
+}
+
+.trip-details {
+  height: 100%;
+  width: 30%;
+}
+
+.trip-area {
+  display: flex;
+  height: 100%;
+  width: 70%;
+  flex-direction: column;
+}
+
+.display-trips {
+  width: 100%;
+  height: 35%;
+}
+
+.search-trips {
+  width: 100%;
+  height: 65%;
+}
+
 
 
 
