--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,12 +7,14 @@ body {
   width: 100vw;
   display: flex;
   flex-direction: column;
+  font-family: sans-serif;
 }
 
 
 .top-nav {
   height: 20%;
   width: 100%;
+  box-shadow: 0px 5px 5px 0px rgb(0 0 0 / 75%);
 }
 
 .main {
@@ -24,6 +26,7 @@ body {
 .trip-details {
   height: 100%;
   width: 30%;
+  box-shadow: 0px 10px 10px 0px rgb(0 0 0 / 75%);
 }
 
 .trip-area {
