--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -17,6 +17,26 @@ body {
   box-shadow: 0px 5px 5px 0px rgb(0 0 0 / 75%);
 }
 
+.logo-section {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  height: 100%;
+  margin-left: 30px;
+}
+
+h1 {
+  height: 100%;
+  font-size: xxx-large;
+  display: flex;
+  padding: 0;
+  margin: 0;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  margin-left: 20px;
+}
+
 .main {
   display: flex;
   height: 80%;
@@ -45,6 +65,26 @@ body {
   width: 100%;
   height: 65%;
 }
+
+.trip-details-header {
+  display: flex;
+  justify-content: center;
+}
+
+.trip-information-page {
+  height: 90%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+h3 {
+  margin-left: 20px;
+}
+
+
+
+
 
 
 
