--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -89,7 +89,24 @@ h1 {
 .search-trips {
   width: 100%;
   height: 65%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
+.date-picker-title,
+.vacation-length,
+.num-travelers {
+  margin-left: 20px;
+}
+
+.vacation-length-box,
+.date-picker,
+.num-travelers-box {
+  width: 135px;
+  height:21px;
+}
+
 
 .trip-details-header {
   display: flex;
