--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -88,10 +88,10 @@ h1 {
 
 .search-trips {
   width: 100%;
-  height: 65%;
+  height: 50%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
 .date-picker-title,
@@ -104,7 +104,7 @@ h1 {
 .date-picker,
 .num-travelers-box,
 .destination-dropdown
- {
+{
   width: 135px;
   height:21px;
 }
@@ -159,10 +159,7 @@ h3 {
 
 .swiper-slide {
   margin: 0;
-
-}
-.mySwiper {
-  width: 480px;
+  height: 20px
 }
 
 .mySwiper2 {
@@ -180,6 +177,12 @@ h3 {
   margin: 10px;
 }
 
+.swiper-slide {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+}
+
 img {
   overflow: hidden;
 }
@@ -194,6 +197,7 @@ img {
   align-content: center;
   justify-content: center;
   align-items: center;
+  position: absolute;
 }
 
 .date-picker-title,
