--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -91,7 +91,7 @@ h1 {
   height: 40%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
 
@@ -257,9 +257,8 @@ figcaption {
 .total-cost-trip {
   margin-bottom: 50px;
   height: 10%;
+  font-size: xx-large;
 }
-
-
 
 .hidden {
   display: none;
