--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -260,6 +260,78 @@ figcaption {
   font-size: xx-large;
 }
 
+.login-main {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.image-container,
+.login-message {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.password-container,
+.username-input {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.username-input {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.login-container {
+  padding: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  width: min-content;
+  border: 1px solid;
+  border-radius: 5px;
+  box-shadow: 0px 5px 5px 0px rgb(0 0 0 / 75%);
+}
+
+.user-name,
+.password-box {
+  margin-left: 10px;
+}
+
+.submit-login {
+  margin-top: 10px;
+}
+
+
+.login-message-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
+}
+
+.loginbutton-container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.submit-login {
+  width: 100px;
+  margin-bottom: 10px;
+}
+
 .hidden {
   display: none;
 }
