--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -302,6 +302,15 @@ figcaption {
   box-shadow: 0px 5px 5px 0px rgb(0 0 0 / 75%);
 }
 
+.error-message-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+}
+
 .user-name,
 .password-box {
   margin-left: 10px;
@@ -330,6 +339,12 @@ figcaption {
 .submit-login {
   width: 100px;
   margin-bottom: 10px;
+}
+
+
+input,
+button {
+  cursor: pointer;
 }
 
 .hidden {
