--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -70,8 +70,9 @@ h1 {
 .past-trips,
 .upcoming-trips,
 .pending-trips {
-  height: 30%;
   margin-left: 20px;
+  width: fit-content;
+  height: fit-content;
 }
 
 .trip-area {
@@ -88,6 +89,7 @@ h1 {
   flex-direction: column;
   align-items: center;
   margin-top: 30px;
+  justify-content: center;
 }
 
 .search-trips {
@@ -139,12 +141,12 @@ h3 {
 
 .traveler-name {
   width: 430px;
-  font-size: xxx-large;
+  font-size: xx-large;
   color: white;
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  margin-right: 30px;
+  margin-right: 50px;
 }
 
 .calendar-button {
@@ -255,6 +257,11 @@ figcaption {
 }
 
 .login-main {
+  background-image: url("https://forever.travel-assets.com/flex/flexmanager/images/2022/01/06/ORB_JanuarySale_imgB_1920x1440_20220106.jpg");
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   width: 100vw;
   height: 100vh;
   display: flex;
@@ -334,9 +341,42 @@ figcaption {
   margin-bottom: 10px;
 }
 
+.swiper {
+  width: 90%;
+  height: 90%;
+}
+
+:root {
+  --swiper-navigation-color: #fff;
+}
+
+.swiper-slide {
+  display: flex;
+  width: 600px;
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
+}
+
 input,
-button {
+button,
+select {
   cursor: pointer;
+}
+
+button {
+  cursor:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>✈️</text></svg>") 16 0,auto; /*!emojicursor.app*/
+}
+
+.vacation-caption-main {
+  box-shadow: 0px 5px 5px 0px rgb(0 0 0 / 75%);
+  width: 80%;
+  height: 10%;
+}
+
+.main-swiper-img {
+  box-shadow: 0px 5px 5px 0px rgb(0 0 0 / 75%);
 }
 
 .hidden {
